@@ -17,6 +17,7 @@ $HeadURL: https://phpmyadmin.svn.sourceforge.net/svnroot/phpmyadmin/trunk/phpMyA
 + [lang] Hungarian update, thanks to Jozsef Tamas Herczeg - dodika 
 - bug #2153970 [core] Properly truncate SQL to avoid half of html tags
 + [lang] Romanian update, thanks to Sergiu Bivol - sbivol
+- bug #2161443 [structure] Incorrect index choice shown when modifying an index 
 
 3.0.0.0 (2008-09-27)
 + [export] properly handle line breaks for YAML, thanks to Dan Barry -
